[gd_scene load_steps=9 format=2]

[ext_resource path="res://world/characters/hero/assets/body.png" type="Texture" id=1]
[ext_resource path="res://world/characters/hero/Body.gd" type="Script" id=2]
[ext_resource path="res://world/characters/hero/assets/beak.png" type="Texture" id=3]
[ext_resource path="res://world/characters/hero/assets/shadow.png" type="Texture" id=4]
[ext_resource path="res://world/characters/hero/assets/hand.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("holder/body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("holder/body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("holder/body:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("holder/body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("holder:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("holder/body:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("holder/body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("holder:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8 ),
"transitions": PoolRealArray( 1.62451, 0.233258, 1.62451, 0.233 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ), Vector2( 0, -5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("holder/body:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -3.0, 3.0 ]
}

[node name="Body" type="Node2D"]
script = ExtResource( 2 )

[node name="anims" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_default_blend_time = 0.05
anims/RESET = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/run = SubResource( 3 )

[node name="shadow" type="Sprite" parent="."]
modulate = Color( 0.196078, 0.196078, 0.196078, 0.482353 )
position = Vector2( 0, -1 )
texture = ExtResource( 4 )

[node name="holder" type="Node2D" parent="."]

[node name="leftHand" type="Sprite" parent="holder"]
position = Vector2( -5.08494, -7.96732 )
texture = ExtResource( 5 )
flip_h = true

[node name="Line2D" type="Line2D" parent="holder/leftHand"]
points = PoolVector2Array( 3.05096, 0.78039, 1.52548, -3.6098, 0, 0 )
width = 2.0
default_color = Color( 0.109804, 0.0901961, 0.211765, 1 )

[node name="back_beak" type="Sprite" parent="holder"]
visible = false
position = Vector2( -4, -7 )
texture = ExtResource( 3 )
flip_v = true
hframes = 3
frame = 1

[node name="body" type="Sprite" parent="holder"]
texture = ExtResource( 1 )
offset = Vector2( 0, -5 )

[node name="front_beak" type="Sprite" parent="holder"]
position = Vector2( -6, -4 )
texture = ExtResource( 3 )
hframes = 3
frame = 1

[node name="rightEye" type="Polygon2D" parent="holder"]
position = Vector2( 0, -7 )
polygon = PoolVector2Array( 0, 0, 1, 0, 1, 1, 0, 1 )

[node name="leftEye" type="Polygon2D" parent="holder"]
position = Vector2( -5, -8 )
polygon = PoolVector2Array( 0, 0, 1, 0, 1, 1, 0, 1 )

[node name="rightHand" type="Sprite" parent="holder"]
position = Vector2( 5.08494, 1.96732 )
texture = ExtResource( 5 )

[node name="Line2D" type="Line2D" parent="holder/rightHand"]
points = PoolVector2Array( -3.05096, -5.18039, -1.52548, -6.5902, 0, 0 )
width = 2.0
default_color = Color( 0.109804, 0.0901961, 0.211765, 1 )
